force-app/main/default/objects/Test_Object__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>