force-app/main/default/objects/Test_Object__c/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <label>Test2</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>