force-app/main/default/objects/Test_Object__c/fields/Test3__c.field-meta.xml
<CustomField>
    <fullName>Test3__c</fullName>
    <label>Test3</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>