force-app/main/default/objects/Test_Object__c/fields/Test4__c.field-meta.xml
<CustomField>
    <fullName>Test4__c</fullName>
    <label>Test4</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>